--- a/1A-home-search/CSS/layout.css
+++ b/1A-home-search/CSS/layout.css
@@ -1,14 +1,20 @@
 .header_container{
-	overflow:auto;
-	max-width:100%;
+    height: 125px;
+	width: 100%;
+	min-width: 1002px;
+}
+.header_container_top_background{
+    background-color:#7dd9e8;
+    
 }
 .header_container_top{
-	background-color:#7dd9e8;
-	overflow:auto;
-	max-width:100%;
-	padding-top:18px;
-	padding-bottom:18px;
+	
+	
+	max-width:946px;
+	padding: 22px 24px 13px 32px;
+    margin: 0 auto;
 }
+/*
 .header_top_left_content{
 	
 	max-width:1022px;
@@ -16,34 +22,39 @@
 	margin-right:auto;
 	overflow:auto;
 }
+*/
 .header_container_bottom{
 	background-color:#f4f4f4;
-	overflow:auto;
+	min-width: 1002px;
 	width:100%;
     height: 40px;
 }
 
 
 .body_container{
+    height: 660px;
+    width: 100%;
 	background-color:#ffffff;
-	max-width:1022px;
-	margin-left:auto;
-	margin-right:auto;
-	padding-top:30px;
-	overflow:auto;
+	min-width:1022px;
+	padding-top:7px;
+	
 }
 .main_container{
-	max-width: 1022px;
-    overflow: auto;
+	max-width: 946px;
+    padding: 22px 24px 13px 32px;
+    margin: 0 auto;
+    
 	
 }
 
 .left_main_container{
-	width:20.68230277185501%;
+	width:194px;
+    height: 604px;
 	float:left;
+    background-color: #f5f5f5;
 }
 .right_main_container{
-	width:76.54584221748401%;
+	
 	float:right;
 }
 
@@ -51,6 +62,8 @@
 
 .footer_container{
 	background-color:#727272;
+    height: 45px;
+    min-width: 1002px;
 	width:100%;
 	
 }
@@ -60,5 +73,5 @@
 	margin-top: 32px;
 	margin-left:auto;
 	margin-right:auto;
-	overflow:auto;
+	
 }
