--- a/1A-home-search/CSS/style.css
+++ b/1A-home-search/CSS/style.css
@@ -2,17 +2,21 @@
 
 .logo{
 	float:left;
+    position: relative;
+    bottom: 4px;
 }
 
 .search{
-	margin-top:22px;
-	width:40%;
-	margin-left:24px;
-	float:left
+
+	float:left;
+    margin: 15px 0 0 14px;
+    width: 400px;
+        
+        
 }
 
 .search-form{
-	width:58%;
+	width:55%;
 	float:left;
 	
 	padding-top: 2px;
@@ -43,27 +47,31 @@
 }
 .search-button{
 	width:53px;
-    margin-right: 80px;
+    margin-right: 85px;
 	float:right;
 	background-repeat:no-repeat;
 }
 
 
 .user_content{
-	width:139px;
+	
 	float:right;
 }
+/*
 .username{
     
 	width:100%;
 	margin-top:6px;
 	overflow:auto;
 } 
+*/
 .settings{
-	width:100%;
-	overflow:auto;
+
 	clear:both;
-    margin-top: 9.984px;
+    top: 3px;
+    right: 8px;
+    position: relative;
+
 }
 .settings_text{
 	font-size: 13px;
@@ -90,19 +98,21 @@
 
 
 .header_bottom_menu{
-	max-width: 1022px;
-	margin-left:auto;
-	margin-right:auto;
+	max-width: 946px;
+	margin: 0 auto;
+    padding: 22px 24px 13px 32px;
 }
 .nav-menu{
-	width:61.19402985074627%;
+	position: relative;
 	float:left;
-	line-height:40px;
+	bottom: 10px;
 }
 .invite_wrapper{
 	width:35%;
 	float:right;
-	padding-top:10px;
+	position: relative;
+    bottom: 10px;
+    letter-spacing: 0.08em;
 	
 }
 .user{
@@ -110,12 +120,15 @@
 	float:right;
 	font-family:Arial;
 	font-weight:bold;
-	font-size:15px;
+	font-size:16px;
+    position: relative;
+    top: 3px;
+    right: 8px;
 	
 }
 
 .nav-menu-text{
-	font-size:14px;
+	font-size:13px;
 	font-family:Arial;
 	list-style-type:none;
 	margin-left: -15px;	
@@ -129,19 +142,16 @@
 	display: block;
 	color: black;	
 }
-.nav-menu-text li:hover{
-	background-color: #4fafbf;
-}
+
 
 .invite-req{
-	font-size:11px;
+	font-size:10px;
 	font-family:Arial;
 	list-style-type:none;
-	padding-bottom: 5px;
-    margin-left: 35px;
+	
 }
 .invite-req li{
-	line-height: 18px;
+	
 	float: left;
 }
 .invite{
@@ -150,6 +160,11 @@
 	background-repeat:no-repeat;
 	padding-left:18px;
 	margin-right:33px;
+    height: 16px;
+}
+.invite a{
+    color: black;
+	text-decoration: none;
 }
 
 .req{
@@ -160,15 +175,17 @@
 	margin-left:15px;
 	padding-left:25px;
 	padding-bottom: 5px;
+    height: 16px;
+}
+
+.req a{
+    color: black;
+	text-decoration: none;
 }
 
 
-
-
 .recent_searches_box{
-	width:100%;	
-	margin-left:auto;
-	margin-right:auto;
+	line-height: 17px;
 }
 .recent_searches_box li:hover{
 	background-color: white;
@@ -192,7 +209,7 @@
     
 	padding-top:15px;
 	
-	background-color:#f2f2f2;
+	
 }
 .content ul li{
 	font-family: Arial;
@@ -203,26 +220,43 @@
 
 .content_style{
 	margin-bottom:10px;
-	overflow:auto;
+	position: relative;
+    list-style: none;
 }
+
+.content_style:first-child{
+    list-style: none;
+    max-height: 50px;
+    position: relative;
+}
+
 .content_style a{
 	display: block;
 	text-decoration: none;
 	color: black;
 }
 
+.content_style .paragraph{
+     display: inline-block;
+    width: 122px;
+}
 
+.content_style .paragraph_bot{
+     display: inline-block;
+    width: 150px;
+}
 
 .right_main_left{
-	width:515.04px;
-    height: 650px;
+	width:515px;
+    padding: 0 24px 0 26px;
+    
 	float:left;
 }
 
 
 .entry_title_style{
 	font-family:Arial;
-	font-size:27px;
+	font-size:30px;
 	padding:0px;
 	margin:-2px;
 }
@@ -269,10 +303,7 @@
 
 
 .options{
-	width:100%;
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:12px;
+	
 	font-family: Arial;
 }
 .option_top{
@@ -282,7 +313,7 @@
 	
 }
 .option_top_left{
-	line-height:9px;
+	line-height:24.999px;
 	width:50%;
 	font-size: 18px;
 	text-align: center;
@@ -291,7 +322,7 @@
 	padding-bottom:14px;
 }
 .option_top_right{
-	line-height:9px;
+	line-height:24.999px;
 	width:50%;
 	float:left;
 	font-size: 18px;
@@ -349,13 +380,13 @@
 	width:100%;
 	margin-left:auto;
 	margin-right:auto;
-	margin-top:15px;
+	
 	float: left;
 }
 .entry_contents{
-	padding-bottom: 80px;
-	width:100%;
-    border-bottom: 1px solid #595959;
+	padding-bottom: 81px;
+	
+    border-bottom: 1px solid #d9d9d9;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:15px;
@@ -364,6 +395,7 @@
 	background-repeat:no-repeat;
 	background-position: left bottom;
 }
+
 
 
 .date{
@@ -382,9 +414,8 @@
 	float:right;
 }
 .entries_title{
-	width:100%;
-	margin-left:auto;
-	margin-right:auto;
+	position: relative;
+    bottom: 5px;
 }
 .detail_title{
 	font-family:Arial;
@@ -392,6 +423,7 @@
 	color:#616161;
 	font-weight:bold;
 	margin-bottom:7px;
+    cursor: pointer;
 }
 .extra{
 	font-family:Arial;
@@ -411,14 +443,18 @@
 .author{
 	font-weight:bold;
 	color: #4fafbf;
+    cursor: pointer;
 }
 .topic{
 	color:#4fafbf;
+    cursor: pointer;
 }
 
 .right_main_right{
-	width:25%;
-    
+	width: 176px;
+    margin-right: 8px;
+    height: 604px;
+    background-color: #f5f5f5;
 	float:right;
 }
 
@@ -479,8 +515,19 @@ img{
 	float:left;
 }
 
-.float-right{
+.float-right:first-child{
 	float:right;
+    position: absolute;
+    bottom: 14px;
+    right: 13px;
+    
+    
 }
 
-
+.float-right{
+    float:right;
+    position: absolute;
+    bottom: 4px;
+    right: 13px;
+    
+}
