--- a/16_Final_Assignment/css/layout.css
+++ b/16_Final_Assignment/css/layout.css
@@ -1,7 +1,7 @@
  .main_container{
         width: 100%;
         height: 100%;
-/*    min-width:768px;*/
+    min-width: 995px;
     
 }
 
@@ -35,3 +35,21 @@
         width: 100%;
     }
     
+
+/*Section*/
+.figure_section_content_wrapper{
+        padding-bottom: 104px;
+        background-color: #f4f4f4;
+    }
+
+.section_footer_container{
+    background-color: #002e5b;
+}
+
+
+
+/*Service*/
+.service_content_wrapper{
+    display: block;
+    width: 100%;
+}
